# kobo-api-v2

./: LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
kobo/: __init__.py  client.py
